--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,25 +3,40 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
+  --primary: #0085ff;
+  --primary-focus: #0050e3;
+  --primary-content: #000000;
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+  --secondary: #ffb21e;
+  --secondary-focus: #ee9d00;
+  --secondary-content: #000000;
+
+  --accent: #63d483;
+  --accent-focus: #2fad52;
+  --accent-content: #000000;
+
+  --neutral: #0f0229;
+  --neutral-focus: #09011a;
+  --neutral-content: #343a40;
+
+  --base-100: #173264;
+  --base-200: #0f244a;
+  --base-300: #01060f;
+  --base-content: #d5ddeb;
+
+  --info: #0446ef;
+  --info-content: #003cd7;
+
+  --success: #63d483;
+  --success-content: #37b159;
+
+  --warning: #ffb21e;
+  --warning-content: #e99d0d;
+
+  --error: #fb6262;
+  --error-content: #ea4747;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: var(--base-300);
 }
