emoji with text message feature is added

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -88,3 +88,16 @@ body {
 .profile_button:hover .profile_menu {
   display: block;
 }
+
+::-webkit-scrollbar {
+  display: block;
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--base-200);
+}
